--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://albeartoz.github.io/tictactoe",
+  "homepage": "https://albeartoz.github.io/tictactoe",
   "name": "tictactoe",
   "version": "0.1.0",
   "private": true,
